# Siphon

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md
src/app/: siphon.cpp
src/siphon/: core.cpp  core.h  core_c2.cpp  core_onnx.cpp  core_regex.cpp  init.cpp  init.h  pyenv.cpp  pyenv.h  utils.h
test/contrib/: README.md
